fixed uneven padding

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -653,6 +653,12 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+
+  .pic img {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 1.5rem;
+  }
 }
 
 @media only screen and (min-width: 485px) {
